# rusvm-python

./: Cargo.toml  README.md  example.py  pyproject.toml
.github/workflows/: CI.yml
examples/: simple.py
src/: kernel.rs  lib.rs  prepare.rs  problem.rs  smo.rs  state.rs
src/kernel/: gaussian.rs
src/problem/: classification.rs
