[package]
name = "rusvmpy"
version = "0.1.0"
authors = ["Nico Strasdat <nstrasdat@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wotzlaff/rusvmpy"
keywords = ["smo", "svm", "machine-learning"]

[lib]
name = "rusvmpy"
crate-type = ["cdylib"]

[dependencies]
rusvm = { path = "../rusvm" }
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"