[package]
name = "rusvm-python"
version = "0.1.0"
authors = ["Nico Strasdat <nstrasdat@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/wotzlaff/rusvm-python"
keywords = ["smo", "svm", "machine-learning"]

[lib]
name = "rusvm"
crate-type = ["cdylib"]

[dependencies]
rusvm = "0.2.3"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21"